dynamic adding of ingots and dusts

--- a/readme
+++ b/readme
@@ -1,16 +1,21 @@
 To Do
 Add resources
-    Sand
-    Coal
+    X Sand
+    Wheat
+    Cows
     
 Add Recipes and items
-    Flint
-    Unfired coke oven brick
-    Coke oven brick
-    Coke oven
     Crafting Bench
+    Science Pack
+    Burner Lab
+    Tin belt
+    Wood pipe
+    Leather
+    
 
 Add Buildings
-    Coke oven
     Crafting Bench
 
+Modify Vanilla
+
+Add researches
