Added cow spawning and changed graphics for ore to be less developement-ish

--- a/readme
+++ b/readme
@@ -1,21 +1,24 @@
 To Do
 Add resources
-    X Sand
     Wheat
     Cows
+    More ore patches
     
 Add Recipes and items
     Crafting Bench
     Science Pack
     Burner Lab
-    Tin belt
     Wood pipe
     Leather
     
 
 Add Buildings
     Crafting Bench
+    Seed finder
 
 Modify Vanilla
+    Remove techs that dont fit (most)
 
-Add researches
+Add techs
+    seed finder
+    
