trying to use gitignore and added animal pen with cow breeding recipe

--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 To Do
 Add resources
     Wheat
-    Cows
+    Cow processing
     More ore patches
     
 Add Recipes and items
@@ -14,7 +14,7 @@ Add Recipes and items
 
 Add Buildings
     Crafting Bench
-    Seed finder
+    Surface level excavator
 
 Modify Vanilla
     Remove techs that dont fit (most)
